# slam-exercises

eigen/: 2robots_coords.cpp  CMakeLists.txt  matrix_le.cpp  plot_trajecotires.cpp  quaternion_R_v.cpp
